--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -499,7 +499,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Step 5: Merging mass shootings data with city locations to use with maps. Left join has been used to ensure we have all the data from mass_shoot."
+        "Step 5: Merging mass shootings data with city locations to use with maps. Left join has been used to ensure we have all the data from mass_shoot.\n"
       ]
     },
     {
@@ -1637,11 +1637,11 @@
         "    </ul>\n",
         "    \n",
         "**Limitations**\n",
-        "    <ul>\n",
+        "<ul>\n",
         "      <li> Data is present only for Small Arms</li>\n",
-        "      <li> We do not have much information about the timeframe for the dataset, so the data may be outdated </li>\n",
+        "      <li> While the website says that the google spreadsheet (Sources: UNODC & Small arms survey) displaying this data is updated every 5 mins, we do not know if the statistics for 'Number of homicides' & 'Average firearms per 100 people' have been updated for the current years or not </li>\n",
         "      <li> Gun Homicides and Gun Ownership Data for United Kingdom and South Korea is not present</li>\n",
-        "    </ul>\n"
+        "  </ul>\n"
       ]
     },
     {
@@ -2409,11 +2409,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DBPprssWAKZK",
+        "colab_type": "text"
+      },
+      "source": [
+        "Countries by average number of average total all civilian firearms"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "bKtkl-gX_sbw",
         "colab_type": "code",
-        "outputId": "217e1900-19fb-4ee5-afe1-13dc4f5cae56",
+        "outputId": "3d6dc61a-c7c2-48b2-a786-df555af5bd48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -2422,7 +2432,7 @@
       "source": [
         "world_crime_developed.sort_values(by = 'avg_tot_all_guns', ascending = False)[:5]"
       ],
-      "execution_count": 23,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2542,7 +2552,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 33
         }
       ]
     },
@@ -2557,15 +2567,15 @@
         "The combined dataset can be used to analyze the following: \n",
         "\n",
         "<ul>\n",
-        "  <li><b><i>Homicides by firearm per 1 million people</i></b>\n",
+        "  <li><b><i>Homicides by firearm per 1 million people: </i></b>\n",
         "This visualization will showcase developed countries according to firearms related homicides. The argument we are trying to present here is that gun availability is a major risk factor for homicides in developed nations. </li>\n",
         "  <ul> <li>Key variables of interest - Country, homi_gun_per100k </li> </ul>\n",
         "<li>\n",
-        "  <b><i>Population vs Ownership of firearms </i></b> In this graph we will plot the population of various countries as well as the ownership of firearms in those countries. This visualization will show us a comparison of the number of people living in a country versus the number of civilians who own firearms in those countries. </li>\n",
+        "  <b><i>Population vs Ownership of firearms: </i></b> In this graph we will plot the population of various countries as well as the ownership of firearms in those countries. This visualization will show us a comparison of the number of people living in a country versus the number of civilians who own firearms in those countries. </li>\n",
         "  <ul> <li>Key variables of interest: Country, pop2019, avg_tot_all_guns </li></ul>\n",
         "  \n",
         "  <li>\n",
-        "    <b><i>Gun related deaths per 100k people vs guns per 100 people</i></b> This visualization will be a scatter plot gun related homicides against gun possession across developed countries. This visualization will help us identify relationship between gun ownership and gun related deaths across developed nations.\n",
+        "    <b><i>Gun related deaths per 100k people vs guns per 100 people: </i></b> This visualization will be a scatter plot comparing gun related homicides against gun possession across developed countries. This visualization will help us identify relationship between gun ownership and gun related deaths across developed nations.\n",
         "    <ul><li>Key variables of interest: Country, homi_gun_per100k, avg_gun_per100</li></ul>\n",
         "  </li>"
       ]
@@ -2597,10 +2607,9 @@
         "colab_type": "text"
       },
       "source": [
-        "On average 10 out of every 100,000 people are killed by firearms across the United States (Ref: https://www.theatlantic.com/national/archive/2011/01/the-geography-of-gun-deaths/69354/). \n",
+        "On an average 10 out of every 100,000 people are killed by firearms across the United States. And, it is commonly assumed that mental illness or stress levels are few of the major triggers. But, what about gun control laws? Might tighter gun control laws make a difference? Some studies indicate that they do.\n",
         "\n",
-        "But social factors like stress,mental illness,increase in populations and immigrants have no relation with gun related deaths\n",
-        "(Ref: https://www.vox.com/policy-and-politics/2017/10/2/16399418/us-gun-violence-statistics-maps-charts). But there is scope for gun laws being in place to actually decrease deaths due to firearms."
+        "Therefore, in this section, we are trying to analyze the relation of firearm related deaths with gun control restrictions by state. It includes states which have one of three gun control restrictions in place - assault weapons' bans, trigger locks, or safe storage requirements. (Source: https://www.theatlantic.com/national/archive/2011/01/the-geography-of-gun-deaths/69354/)."
       ]
     },
     {
@@ -2611,9 +2620,9 @@
       },
       "source": [
         "### Datasets and Sources\n",
-        "**1. Firearms Child Protection**: The dataset consists of details of states with firearm laws designed to protect children. Each row represents the whether Child Access Prevention Firearm Law, Safe Storage Gun Lock Requirment and Assault Weapons Ban is present or not. Source: https://www.kff.org/other/state-indicator/firearms-and-children-legislation/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
+        "*1. Firearms Child Protection*: This dataset consists details of states with firearm laws designed to protect children. Each row represents whether, 'Child Access Prevention Firearm Law', 'Safe Storage Gun Lock Requirment' and 'Assault Weapons Ban' is present or not. (Source: https://www.kff.org/other/state-indicator/firearms-and-children-legislation/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D)\n",
         "\n",
-        "**2. Firearms Deaths**: The dataset consists number of deaths due to injury by firearms per 100,000 population in each state. Source: https://www.kff.org/other/state-indicator/firearms-death-rate-per-100000/?currentTimeframe=3&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
+        "*2. Firearms Deaths*: This dataset consists number of deaths due to injury by firearms per 100,000 population in each state. (Source: https://www.kff.org/other/state-indicator/firearms-death-rate-per-100000/?currentTimeframe=3&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D)\n",
         "\n",
         "\n",
         "**Variables of Interest:**\n",
@@ -2624,7 +2633,7 @@
         "      <li><i>Firearms Death Rate per 100,000</i>: Deaths rate to injury by firearms per 100,000 Population</li>\n",
         "    </ul>\n",
         "    \n",
-        " **Limitations**\n",
+        "**Limitations**\n",
         " *  Firearms Child Protection dataset is only present for 2014 so the analysis is done only on 2014 data. Some states might have implemented laws which could not be captured\n",
         " * State laws applies to assault pistols only\n",
         " * Deaths from injury due to firearms excludes deaths due to explosives and other causes indirectly caused by firearms."
@@ -2648,8 +2657,8 @@
       },
       "source": [
         "The dataset needs some processing before we start exploring and visualizing the dataset further. Steps to be followed are:\n",
-        "- Merging with the  Firearms Deaths data with  Firearm Child Protection\n",
-        "- Creating new columns for states which has at least one gun law present"
+        "- Merging  'Firearms Deaths' data with  'Firearm Child Protection'\n",
+        "- Creating new columns for states which have at least one gun law present"
       ]
     },
     {
@@ -3185,7 +3194,7 @@
         "### Scope of Analysis\n",
         "Combined dataset will be used to analyze the following:\n",
         "<ul>\n",
-        "  <li><b><i>Relation of Gun laws with gun related deaths :</i></b> Analysis of gun related deaths with firearm laws can be performed to find the relation between these two and find if the presence of gun laws make some difference</li>\n",
+        "  <li><b><i>Relation of gun restriction laws with gun related deaths :</i></b> This visualization will showcase the relation of firearm deaths with gun control restrictions for all US states. This will help us analyze if firearm deaths are significantly lower in states with stricter gun control legislation.</li>\n",
         "  <ul>\n",
         "    <li>Key variable of interest: Assault Weapons Ban, atleast_1_law, Child Access Prevention Firearm Law, Safe Storage or Gun Lock Requirment, Firearms Death Rate per 100,000</li>\n",
         "  </ul>"
