--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -3244,7 +3244,9 @@
         "https://www.kff.org/other/state-indicator/firearms-death-rate-per-100000/?currentTimeframe=3&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
         "\n",
         "* Nearly 40,000 People Died From Guns in U.S. Last Year, Highest in 50 Years\n",
-        "https://www.nytimes.com/2018/12/18/us/gun-deaths.html"
+        "https://www.nytimes.com/2018/12/18/us/gun-deaths.html\n",
+        "\n",
+        "* The Geography of Gun Deaths https://www.theatlantic.com/national/archive/2011/01/the-geography-of-gun-deaths/69354/\n"
       ]
     }
   ]
