--- a/Gun_Violence_in_the_United_States_First_Version.ipynb
+++ b/Gun_Violence_in_the_United_States_First_Version.ipynb
@@ -3851,12 +3851,16 @@
       ]
      },
      "execution_count": 48,
-     "metadata": {},
+     "metadata": {
+      "image/png": {
+       "width": 1000
+      }
+     },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image('https://raw.githubusercontent.com/pragyansharma24/Gun-Violence-in-United-States/master/Images/3_LawAnalysis.png')"
+    "Image('https://raw.githubusercontent.com/pragyansharma24/Gun-Violence-in-United-States/master/Images/3_LawAnalysis.png', width = 1000)"
    ]
   },
   {
