Final file with youtube link

--- a/Gun_Violence_in_the_United_States_Final_Version.ipynb
+++ b/Gun_Violence_in_the_United_States_Final_Version.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Alt text](https://raw.githubusercontent.com/pragyansharma24/Gun-Violence-in-United-States/master/Images/Final_Version/Gun_Violence_Analysis_Video.PNG)](https://www.youtube.com/watch?v=yEI9JHFK7A8&feature=youtube)"
+    "![Alt text](https://raw.githubusercontent.com/pragyansharma24/Gun-Violence-in-United-States/master/Images/Final_Version/Gun_Violence_Analysis_Video.PNG)"
    ]
   },
   {
